--- a/app/components/auk/tab.hbs
+++ b/app/components/auk/tab.hbs
@@ -1,32 +1,16 @@
 {{#if @route}}
-  {{!-- Outer LinkTo used merely for active-class (taking into account current-when etc),
-      therefore disabled and in need of the deprecated @tagName.
-      Inner LinkTo used for navigation --}}
-  {{!-- template-lint-disable no-unknown-arguments-for-builtin-components --}}
-  <LinkTo
-    @tagName="li"
-    class="auk-tabs__tab
-      {{if @isHierarchicalBack "auk-tabs__hierarchical-back"}}"
-    @activeClass="auk-tabs__tab--active"
-    @loadingClass=""
-    @disabledClass=""
-    @disabled={{true}}
-    @route={{@route}}
-    @models={{this.models}}
-    @current-when={{@current-when}}
-    @query={{this.query}}
+  <li
+    class="auk-tabs__tab {{if @isHierarchicalBack "auk-tabs__hierarchical-back"}}"
     ...attributes
   >
-    {{!-- template-lint-enable no-unknown-arguments-for-builtin-components --}}
     <LinkTo
-      @activeClass=""
-      @loadingClass=""
-      @disabledClass=""
       @route={{@route}}
       @models={{this.models}}
-      @disabled={{@disabled}}
-      @current-when={{@current-when}}
       @query={{this.query}}
+      @current-when={{@current-when}}
+      @disabled={{@disabled}}
+      @activeClass="auk-tabs__tab__link--active"
+      class="auk-tabs__tab__link"
     >
       <Auk::Tab::InnerLayout
         @layout={{@layout}}
@@ -36,18 +20,16 @@
         {{yield}}
       </Auk::Tab::InnerLayout>
     </LinkTo>
-  </LinkTo>
+  </li>
 {{else if @isHierarchicalBack}}
-  <li
-    class="auk-tabs__tab auk-tabs__hierarchical-back auk-tabs__tab--active"
+  <li class="auk-tabs__tab auk-tabs__hierarchical-back">
     {{!-- Here the tab always has the active class because that's how it would
           behave if passed in a @route to the parent route, because the parent
           route is always active --}}
-  >
-    {{!-- template-lint-disable link-href-attributes no-invalid-interactive --}}
     <a
       type="button"
-      disabled={{not this.hasHistory}}
+      disabled={{not this.hasHistory}} {{!-- TODO: this does nothing at the moment as `disabled` can't be used on link/anchor elements --}}
+      class="auk-tabs__tab__link auk-tabs__tab__link--active"
       {{on "click" this.transitionBack}}
       ...attributes
     >
@@ -57,15 +39,14 @@
         @counter={{@counter}}
       />
     </a>
-    {{!-- template-lint-enable link-href-attributes no-invalid-interactive --}}
   </li>
 {{else}}
-  <li
-    class="auk-tabs__tab
-      {{if @isHierarchicalBack "auk-tabs__hierarchical-back"}}
-      {{if @active "auk-tabs__tab--active"}}"
-  >
-    <button type="button" ...attributes>
+  <li class="auk-tabs__tab">
+    <button
+      type="button"
+      class="auk-tabs__tab__link {{if @active "auk-tabs__tab__link--active"}}"
+      ...attributes
+    >
       <Auk::Tab::InnerLayout
         @layout={{@layout}}
         @icon={{this.icon}}
