--- a/app/components/auk/tab/inner-layout.hbs
+++ b/app/components/auk/tab/inner-layout.hbs
@@ -1,16 +1,16 @@
-<span class="auk-tabs__tab-inner">
+<span class="auk-tabs__tab__inner">
   {{#if @icon}}
     {{#if (eq @layout "icon-right")}}
-      <div class="auk-tabs__label">{{yield}}</div>
+      <div class="auk-tabs__tab__label">{{yield}}</div>
       <Auk::Icon @name={{@icon}} />
     {{else}}
       <Auk::Icon @name={{@icon}} />
-      <div class="auk-tabs__label">{{yield}}</div>
+      <div class="auk-tabs__tab__label">{{yield}}</div>
     {{/if}}
   {{else}}
-    <div class="auk-tabs__label">{{yield}}</div>
+    <div class="auk-tabs__tab__label">{{yield}}</div>
     {{#if this.hasCounter}}
-      <div class="auk-tabs__tab-counter">({{@counter}})</div>
+      <div class="auk-tabs__tab__counter">({{@counter}})</div>
     {{/if}}
   {{/if}}
 </span>
