--- a/app/components/agenda/agendaitem/agendaitem-decision.hbs
+++ b/app/components/agenda/agendaitem/agendaitem-decision.hbs
@@ -16,20 +16,6 @@
               {{#if this.report.pieceParts}}
                 <Group.Item>
                   <AuButton
-                    @icon="pdf"
-                    @skin="naked"
-                    @disabled={{or
-                      this.exportPdf.isRunning
-                      (if this.report.file true false)
-                    }}
-                    @loading={{this.exportPdf.isRunning}}
-                    {{on "click" (perform this.exportPdf)}}
-                  >
-                    {{t "export-as-pdf"}}
-                  </AuButton>
-                </Group.Item>
-                <Group.Item>
-                  <AuButton
                     @skin="naked"
                     @icon="pencil"
                     @iconAlignment="left"
@@ -86,23 +72,18 @@
 
   {{#if this.loadReport.isIdle}}
     {{#if (and (not this.isEditing) this.report.pieceParts)}}
-      {{! We need to guarantee the report has a file attached to it.
-      We can have reports with only piece parts, then we need to display
-      the previous version (which is guaranteed to have a file) }}
-      {{#if (or this.report.file this.previousReport)}}
-        <Auk::Panel::Body
-          class="{{if this.isEditing 'au-u-background-gray-100'}}"
-        >
-          <Documents::DocumentCard
-            @piece={{if this.report.file this.report this.previousReport}}
-            @isEditable={{true}}
-            @agendaContext={{@agendaContext}}
-            @hideNewerVersions={{true}}
-            @hideActions={{true}}
-            @bordered={{true}}
-          />
-        </Auk::Panel::Body>
-      {{/if}}
+      <Auk::Panel::Body
+        class="{{if this.isEditing 'au-u-background-gray-100'}}"
+      >
+        <Documents::DocumentCard
+          @piece={{this.report}}
+          @isEditable={{true}}
+          @agendaContext={{@agendaContext}}
+          @hideNewerVersions={{true}}
+          @hideActions={{true}}
+          @bordered={{true}}
+        />
+      </Auk::Panel::Body>
     {{/if}}
 
     {{#if this.isEditing}}
