--- a/app/components/documents/document-preview/signatures-tab.hbs
+++ b/app/components/documents/document-preview/signatures-tab.hbs
@@ -2,7 +2,7 @@
   {{#if this.loadSignatureRelatedData.isRunning}}
     <Auk::Loader />
   {{else if this.signMarkingActivity}}
-    Signature pill!
+    <SignaturePill @signMarkingActivity={{this.signMarkingActivity}}/>
   {{else if this.agendaitem}}
     <p class="au-u-muted auk-u-mt-2">
       {{or @piece.documentContainer.type.label (t "no-document-type")}}
@@ -13,6 +13,20 @@
     <Signatures::CreateSignFlow
       @piece={{@piece}}
       @decisionActivity={{this.decisionActivity}}
+      @onChangeSigners={{fn (mut this.signers)}}
+      @onChangeApprovers={{fn (mut this.approvers)}}
+      @onChangeNotificationAddresses={{fn (mut this.notificationAddresses)}}
     />
+
+    <AuToolbar class="auk-u-mt-4" as |Group|>
+      <Group>
+        <AuButton
+          @loading={{this.createSignFlow.isRunning}}
+          {{on "click" this.createSignFlow.perform}}
+        >
+          {{t "start-signing"}}
+        </AuButton>
+      </Group>
+    </AuToolbar>
   {{/if}}
 </div>
