--- a/app/components/signatures/create-sign-flow.hbs
+++ b/app/components/signatures/create-sign-flow.hbs
@@ -1,31 +1,34 @@
-{{#if this.isLoading}}
-  <Auk::Loader />
-{{else}}
-  <Auk::Panel class="auk-u-mt-2">
-    <Auk::Panel::Header class="auk-u-px-1">
-      <Auk::Toolbar as |Toolbar|>
-        <Toolbar.Group @position="left" as |Group|>
-          <Group.Item>
-            <h4 class="auk-h4 auk-u-m-0">
-              {{t "to-sign-by"}}
-            </h4>
-          </Group.Item>
-        </Toolbar.Group>
-        <Toolbar.Group @position="right" as |Group|>
-          <Group.Item>
-            <AuButton
-              @skin="secondary"
-              @icon="pencil"
-              {{on "click" (toggle "showMinisterModal" this)}}
-            >
-              {{t "edit-list"}}
-            </AuButton>
-          </Group.Item>
-        </Toolbar.Group>
-      </Auk::Toolbar>
-    </Auk::Panel::Header>
-    <Auk::Panel::Body class="auk-u-p-0">
-      <Auk::List @bordered={{true}}>
+<Auk::Panel class="auk-u-mt-2">
+  <Auk::Panel::Header class="auk-u-px-1">
+    <Auk::Toolbar as |Toolbar|>
+      <Toolbar.Group @position="left" as |Group|>
+        <Group.Item>
+          <h4 class="auk-h4 auk-u-m-0">
+            {{t "to-sign-by"}}
+          </h4>
+        </Group.Item>
+      </Toolbar.Group>
+      <Toolbar.Group @position="right" as |Group|>
+        <Group.Item>
+          <AuButton
+            @skin="secondary"
+            @icon="pencil"
+            @loading={{this.loadSigners.isRunning}}
+            {{on "click" (toggle "showMinisterModal" this)}}
+          >
+            {{t "edit-list"}}
+          </AuButton>
+        </Group.Item>
+      </Toolbar.Group>
+    </Auk::Toolbar>
+  </Auk::Panel::Header>
+  <Auk::Panel::Body class="auk-u-p-0">
+    <Auk::List @bordered={{true}}>
+      {{#if this.loadSigners.isRunning}}
+        <Auk::List::Item>
+          <Auk::Loader />
+        </Auk::List::Item>
+      {{else}}
         {{#each this.signers as |signer|}}
           <Auk::List::Item
             class="auk-o-flex auk-o-flex--justify-between auk-o-flex--vertical-center"
@@ -46,128 +49,128 @@
             {{t "no-signers-selected"}}
           </Auk::List::Item>
         {{/each}}
-      </Auk::List>
-    </Auk::Panel::Body>
-  </Auk::Panel>
-  <Auk::Panel class="auk-u-mt-4">
-    <Auk::Panel::Header class="auk-u-px-1">
-      <Auk::Toolbar as |Toolbar|>
-        <Toolbar.Group @position="left" as |Group|>
-          <Group.Item>
-            <h4 class="auk-h4 auk-u-m-0">
-              {{t "to-approve-by"}}
-            </h4>
-          </Group.Item>
-        </Toolbar.Group>
-        <Toolbar.Group @position="right" as |Group|>
-          <Group.Item>
-            <AuButton
-              @skin="secondary"
-              @icon="plus"
-              {{on "click" (toggle "showApproversModal" this)}}
-            >
-              {{t "add"}}
-            </AuButton>
-          </Group.Item>
-        </Toolbar.Group>
-      </Auk::Toolbar>
-    </Auk::Panel::Header>
-    <Auk::Panel::Body class="auk-u-p-0">
-      <Auk::List @bordered={{true}}>
-        {{#each this.approvers as |approver|}}
-          <Auk::List::Item
-            class="auk-o-flex auk-o-flex--justify-between auk-o-flex--vertical-center"
+      {{/if}}
+    </Auk::List>
+  </Auk::Panel::Body>
+</Auk::Panel>
+<Auk::Panel class="auk-u-mt-4">
+  <Auk::Panel::Header class="auk-u-px-1">
+    <Auk::Toolbar as |Toolbar|>
+      <Toolbar.Group @position="left" as |Group|>
+        <Group.Item>
+          <h4 class="auk-h4 auk-u-m-0">
+            {{t "to-approve-by"}}
+          </h4>
+        </Group.Item>
+      </Toolbar.Group>
+      <Toolbar.Group @position="right" as |Group|>
+        <Group.Item>
+          <AuButton
+            @skin="secondary"
+            @icon="plus"
+            {{on "click" (toggle "showApproversModal" this)}}
           >
-            {{approver}}
-            <AuButton
-              @skin="naked"
-              @alert={{true}}
-              @hideText={{true}}
-              @icon="trash"
-              {{on "click" (fn this.removeApprover approver)}}
-            >
-              {{t "delete"}}
-            </AuButton>
-          </Auk::List::Item>
-        {{else}}
-          <Auk::List::Item>
-            {{t "no-approvers-selected"}}
-          </Auk::List::Item>
-        {{/each}}
-      </Auk::List>
-    </Auk::Panel::Body>
-  </Auk::Panel>
-  <Auk::Panel class="auk-u-mt-4">
-    <Auk::Panel::Header class="auk-u-px-1">
-      <Auk::Toolbar as |Toolbar|>
-        <Toolbar.Group @position="left" as |Group|>
-          <Group.Item>
-            <h4 class="auk-h4 auk-u-m-0">
-              {{t "signing-hub-notifications"}}
-            </h4>
-          </Group.Item>
-        </Toolbar.Group>
-        <Toolbar.Group @position="right" as |Group|>
-          <Group.Item>
-            <AuButton
-              @skin="secondary"
-              @icon="plus"
-              {{on "click" (toggle "showNotificationAddressesModal" this)}}
-            >
-              {{t "add"}}
-            </AuButton>
-          </Group.Item>
-        </Toolbar.Group>
-      </Auk::Toolbar>
-    </Auk::Panel::Header>
-    <Auk::Panel::Body class="auk-u-p-0">
-      <Auk::List @bordered={{true}}>
-        {{#each this.notificationAddresses as |notificationAddress|}}
-          <Auk::List::Item
-            class="auk-o-flex auk-o-flex--justify-between auk-o-flex--vertical-center"
+            {{t "add"}}
+          </AuButton>
+        </Group.Item>
+      </Toolbar.Group>
+    </Auk::Toolbar>
+  </Auk::Panel::Header>
+  <Auk::Panel::Body class="auk-u-p-0">
+    <Auk::List @bordered={{true}}>
+      {{#each this.approvers as |approver|}}
+        <Auk::List::Item
+          class="auk-o-flex auk-o-flex--justify-between auk-o-flex--vertical-center"
+        >
+          {{approver}}
+          <AuButton
+            @skin="naked"
+            @alert={{true}}
+            @hideText={{true}}
+            @icon="trash"
+            {{on "click" (fn this.removeApprover approver)}}
           >
-            {{notificationAddress}}
-            <AuButton
-              @skin="naked"
-              @alert={{true}}
-              @hideText={{true}}
-              @icon="trash"
-              {{on "click" (fn this.removeNotificationAddress notificationAddress)}}
-            >
-              {{t "delete"}}
-            </AuButton>
-          </Auk::List::Item>
-        {{else}}
-          <Auk::List::Item>
-            {{t "no-notification-addresses-selected"}}
-          </Auk::List::Item>
-        {{/each}}
-      </Auk::List>
-    </Auk::Panel::Body>
-  </Auk::Panel>
+            {{t "delete"}}
+          </AuButton>
+        </Auk::List::Item>
+      {{else}}
+        <Auk::List::Item>
+          {{t "no-approvers-selected"}}
+        </Auk::List::Item>
+      {{/each}}
+    </Auk::List>
+  </Auk::Panel::Body>
+</Auk::Panel>
+<Auk::Panel class="auk-u-mt-4">
+  <Auk::Panel::Header class="auk-u-px-1">
+    <Auk::Toolbar as |Toolbar|>
+      <Toolbar.Group @position="left" as |Group|>
+        <Group.Item>
+          <h4 class="auk-h4 auk-u-m-0">
+            {{t "signing-hub-notifications"}}
+          </h4>
+        </Group.Item>
+      </Toolbar.Group>
+      <Toolbar.Group @position="right" as |Group|>
+        <Group.Item>
+          <AuButton
+            @skin="secondary"
+            @icon="plus"
+            {{on "click" (toggle "showNotificationAddressesModal" this)}}
+          >
+            {{t "add"}}
+          </AuButton>
+        </Group.Item>
+      </Toolbar.Group>
+    </Auk::Toolbar>
+  </Auk::Panel::Header>
+  <Auk::Panel::Body class="auk-u-p-0">
+    <Auk::List @bordered={{true}}>
+      {{#each this.notificationAddresses as |notificationAddress|}}
+        <Auk::List::Item
+          class="auk-o-flex auk-o-flex--justify-between auk-o-flex--vertical-center"
+        >
+          {{notificationAddress}}
+          <AuButton
+            @skin="naked"
+            @alert={{true}}
+            @hideText={{true}}
+            @icon="trash"
+            {{on "click" (fn this.removeNotificationAddress notificationAddress)}}
+          >
+            {{t "delete"}}
+          </AuButton>
+        </Auk::List::Item>
+      {{else}}
+        <Auk::List::Item>
+          {{t "no-notification-addresses-selected"}}
+        </Auk::List::Item>
+      {{/each}}
+    </Auk::List>
+  </Auk::Panel::Body>
+</Auk::Panel>
 
-  {{#if this.showMinisterModal}}
-    <Signatures::SelectMinistersModal
-      @loading={{this.saveSigners.isRunning}}
-      @selected={{map-by "id" this.signers}}
-      @onConfirm={{this.saveSigners.perform}}
-      @onCancel={{toggle "showMinisterModal" this}}
-    />
-  {{/if}}
+{{#if this.showMinisterModal}}
+  <Signatures::SelectMinistersModal
+    @loading={{this.saveSigners.isRunning}}
+    @selected={{map-by "id" this.signers}}
+    @onConfirm={{this.saveSigners.perform}}
+    @onCancel={{toggle "showMinisterModal" this}}
+  />
+{{/if}}
 
-  {{#if this.showApproversModal}}
-    <Signatures::EmailModal
-      @title={{t "add-approval"}}
-      @onConfirm={{this.saveApprover}}
-      @onCancel={{toggle "showApproversModal" this}}
-    />
-  {{/if}}
+{{#if this.showApproversModal}}
+  <Signatures::EmailModal
+    @title={{t "add-approval"}}
+    @onConfirm={{this.saveApprover}}
+    @onCancel={{toggle "showApproversModal" this}}
+  />
+{{/if}}
 
-  {{#if this.showNotificationAddressesModal}}
-    <Signatures::EmailModal
-      @title={{t "add-notification"}}
-      @onConfirm={{this.saveNotificationAddress}}
-      @onCancel={{toggle "showNotificationAddressesModal" this}}
-    />
-  {{/if}}
+{{#if this.showNotificationAddressesModal}}
+  <Signatures::EmailModal
+    @title={{t "add-notification"}}
+    @onConfirm={{this.saveNotificationAddress}}
+    @onCancel={{toggle "showNotificationAddressesModal" this}}
+  />
 {{/if}}
