--- a/app/templates/signatures/index.hbs
+++ b/app/templates/signatures/index.hbs
@@ -99,7 +99,7 @@
         @icon="sign"
         {{on "click" (fn this.openSidebar piece)}}
       >
-        {{t "start-process"}}
+        {{t "start-signing"}}
       </AuButton>
     </td>
   </:body>
@@ -107,7 +107,7 @@
     <div class="auk-sidebar">
       <div class="auk-sidebar__header">
         <h4 class="auk-toolbar-complex__title">
-          {{t "start-process"}}
+          {{t "start-signing"}}
         </h4>
         <Auk::Button
           @icon="x"
@@ -144,9 +144,22 @@
         <Signatures::CreateSignFlow
           @piece={{this.piece}}
           @decisionActivity={{this.decisionActivity}}
+          @onChangeSigners={{fn (mut this.signers)}}
+          @onChangeApprovers={{fn (mut this.approvers)}}
+          @onChangeNotificationAddresses={{fn (mut this.notificationAddresses)}}
         />
       </div>
       <div class="auk-sidebar__footer">
+        <AuToolbar as |Group|>
+          <Group>
+            <AuButton
+              @loading={{this.createSignFlow.isRunning}}
+              {{on "click" this.createSignFlow.perform}}
+            >
+              {{t "start-signing"}}
+            </AuButton>
+          </Group>
+        </AuToolbar>
       </div>
     </div>
   </:aside>
