--- a/app/components/documents/document-preview/signatures-tab.hbs
+++ b/app/components/documents/document-preview/signatures-tab.hbs
@@ -50,33 +50,29 @@
         </Group>
       </AuToolbar>
     {{else}}
-        <AuAlert
-          @skin="warning"
-          @icon="alert-triangle"
-          @title={{t "cannot-sign"}}
-        >
-          <p>{{t "cannot-create-sign-flow-message"}}</p>
-        </AuAlert>
+      <AuAlert
+        @skin="warning"
+        @icon="alert-triangle"
+        @title={{t "cannot-sign"}}
+      >
+        <p>{{t "cannot-create-sign-flow-message"}}</p>
+      </AuAlert>
     {{/if}}
   {{else}}
-    <AuAlert
-      @skin="warning"
-      @icon="alert-triangle"
-      @title={{t "cannot-sign"}}
-    >
+    <AuAlert @skin="warning" @icon="alert-triangle" @title={{t "cannot-sign"}}>
       <p>{{t "cannot-sign-message"}}</p>
     </AuAlert>
   {{/if}}
 </div>
 
 {{#if this.isOpenVerifyDeleteSignFlow}}
-  {{!-- TODO: vl-refactor --}}
-  {{!-- We can't use AuModal here because said modals get rendered inside a
+  {{! TODO: vl-refactor }}
+  {{! We can't use AuModal here because said modals get rendered inside a
         "wormhole" div. The current component is also part of a modal which gets
         rendered in the same "wormhole", so opening another AuModal here will
         overwrite the existing page content, and break the route. If AuModals
         ever support rendering multiple modals over each other, we can use one
-        here, otherwise we might want to make the doc view not be a modal. --}}
+        here, otherwise we might want to make the doc view not be a modal. }}
   <WebComponents::VlModalVerify
     @title={{t "delete-all-sign-flow-data"}}
     @message={{t "verify-delete-all-sign-flow-data"}}
