--- a/app/templates/agenda/minutes.hbs
+++ b/app/templates/agenda/minutes.hbs
@@ -37,155 +37,10 @@
           </Auk::Toolbar>
         </Auk::Panel::Header>
 
-        {{#if this.document}}
+        {{#if this.isEditing}}
           <Auk::Panel::Body
-            class="{{if this.isEditing 'au-u-background-gray-100'}}"
+            class="au-o-flow {{if this.isEditing 'au-u-background-gray-100'}}"
           >
-            <div class="vlc-document-card">
-              <div class="vlc-document-card__summary">
-                <div class="vlc-document-card__content">
-                  <Auk::Toolbar @auto={{true}} as |Toolbar|>
-                    <Toolbar.Group @position="left" as |Group|>
-                      <Group.Item>
-                        <Auk::Badge
-                          @skin="success"
-                          @icon="document-added"
-                          @size="large"
-                        />
-                      </Group.Item>
-                      <Group.Item class="auk-u-maximize-width">
-                        <div
-                          class="auk-o-flex auk-o-flex--vertical-center auk-o-flex--spaced"
-                        >
-                          <span
-                            data-test-document-card-type
-                            class="auk-overline"
-                          >
-                            Notulen
-                          </span>
-                          <span class="auk-overline">
-                            01-02-2023
-                          </span>
-                          <span class="auk-overline">
-                            PDF
-                          </span>
-                        </div>
-                        <LinkTo
-                          @route="export.notes"
-                          ,
-                          target="_blank"
-                          rel="noopener noreferrer"
-                          class="auk-h4 au-u-flex au-u-flex--vertical-center au-u-flex--spaced-tiny"
-                        >
-                          DOC.02032 — Notulen
-                        </LinkTo>
-                      </Group.Item>
-                    </Toolbar.Group>
-                    <Toolbar.Group @position="right" as |Group|>
-                      <Group.Item>
-                        {{#if (or this.signatureRequested @signatureMockupAlt)}}
-                          <SignaturePill
-                            @isEditable={{true}}
-                            @signatureMockupAlt={{@signatureMockupAlt}}
-                          />
-                        {{else if
-                          (or this.signatureRequested @signatureMockup)
-                        }}
-                          <SignaturePill
-                            @isEditable={{true}}
-                            @signatureMockup={{@signatureMockup}}
-                          />
-                        {{else}}
-                        {{/if}}
-                      </Group.Item>
-                      <Group.Item>
-                        <AuDropdown
-                          data-test-document-card-actions={{true}}
-                          @icon="three-dots"
-                          @title={{t "more"}}
-                          @hideText={{true}}
-                          @disabled={{this.loadPieceRelatedData.isRunning}}
-                          @alignment="right"
-                        >
-                          <AuButton @skin="link" role="menuitem">
-                            {{#if (eq this.signatureRequested true)}}
-                              Verwijderen van handtekenen
-                            {{else}}
-                              Aanbieden voor handtekenen
-                            {{/if}}
-                          </AuButton>
-                          <AuButton
-                            data-test-document-card-delete
-                            @skin="link"
-                            @alert={{true}}
-                            role="menuitem"
-                          >
-                            {{t "document-delete"}}
-                          </AuButton>
-                        </AuDropdown>
-                      </Group.Item>
-                    </Toolbar.Group>
-                  </Auk::Toolbar>
-                </div>
-              </div>
-              {{#if this.version}}
-                <div class="vlc-document-card-versions">
-                  <Auk::Accordion>
-                    <Auk::Accordion::Item
-                      @title={{t "previous-versions"}}
-                      @disabled={{this.loadPieceRelatedData.isRunning}}
-                      @expandTask={{this.loadVersionHistory}}
-                      data-test-document-card-version-history
-                    >
-                      {{#if this.loadVersionHistory.isRunning}}
-                        <div class="auk-u-p-3">
-                          <Auk::Loader />
-                        </div>
-                      {{else}}
-                        <div class="vlc-document-holder">
-                          <div class="vlc-document-card-item">
-                            <div class="vlc-document-card-item__title">
-                              <LinkTo
-                                @route="document"
-                                @model={{piece.id}}
-                                class="auk-h4 auk-u-m-0 auk-u-mr-4 vlc-document-card-item__title-link"
-                              >
-                                DOC.02032 — Notulen
-                              </LinkTo>
-                              <div
-                                class="auk-o-flex auk-o-flex--spaced auk-o-flex--vertical-center"
-                              >
-                                <AuPill @icon="sign">Getekend</AuPill>
-                              </div>
-                            </div>
-                            <div
-                              class="vlc-document-card-item__meta au-u-muted"
-                            >
-                              {{! no piece.created in legacy data }}
-                              {{#if piece.created}}
-                                {{t "uploaded-at"}}
-                                {{moment-format piece.created}}
-                                {{t "at"}}
-                                {{moment-format piece.created "HH:mm"}}
-                              {{/if}}
-                            </div>
-                            <div class="vlc-document-card-item__icon">
-                              <Auk::Icon @name="clock-rewind" @size="small" />
-                            </div>
-                          </div>
-                        </div>
-                      {{/if}}
-                    </Auk::Accordion::Item>
-                  </Auk::Accordion>
-                </div>
-              {{/if}}
-            </div>
-          </Auk::Panel::Body>
-        {{/if}}
-        <Auk::Panel::Body
-          class="au-o-flow {{if this.isEditing 'au-u-background-gray-100'}}"
-        >
-          {{#if this.isEditing}}
             <SayEditor
               @showSave={{true}}
               @showUpdateContent={{true}}
@@ -196,26 +51,7 @@
               @versioningValueKey="value"
               @versioningPreviousVersionKey="previousPiece"
             />
-          {{else}}
-            {{#if @model.minutes}}
-              <AuContent>
-                <SanitizeHtml
-                  @raw={{true}}
-                  @value={{this.model.minutes.value}}
-                />
-              </AuContent>
-            {{else}}
-              <AuAlert
-                @title='Klik op "Aanmaken" om de notulen aan te maken'
-                @icon="circle-info"
-                @skin="info"
-                @size="small"
-                @closable={{false}}
-              />
-            {{/if}}
-          {{/if}}
-        </Auk::Panel::Body>
-        {{#if this.isEditing}}
+          </Auk::Panel::Body>
           <Auk::Panel::Footer class="au-u-background-gray-100">
             <Auk::Toolbar>
               <Auk::Toolbar::Group @position="left">
@@ -242,9 +78,29 @@
               </Auk::Toolbar::Group>
             </Auk::Toolbar>
           </Auk::Panel::Footer>
+        {{else}}
+          <Auk::Panel::Body
+            class="au-o-flow {{if this.isEditing 'au-u-background-gray-100'}}"
+          >
+            {{#if @model.minutes}}
+              <AuContent>
+                <SanitizeHtml
+                  @raw={{true}}
+                  @value={{this.model.minutes.value}}
+                />
+              </AuContent>
+            {{else}}
+              <AuAlert
+                @title={{t "create-minutes-click-create-button-message"}}
+                @icon="circle-info"
+                @skin="info"
+                @size="small"
+                @closable={{false}}
+              />
+            {{/if}}
+          </Auk::Panel::Body>
         {{/if}}
       </Auk::Panel>
-
     </div>
   </div>
 </div>
